@@ -1,3 +1,10 @@
+2006-12-07 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Disable voikkohyphenate on Windows by making it print out an error
+	  about unsupported operating system. This is because it is questionable
+	  whether linking against msvcp60.dll is allowed by the GPL and no other
+	  library that I know of provides mbrlen on Windows.
+
 2006-12-05 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Make libiconv optional on Windows. If it is not available,
